body overflow fix

--- a/src/styles/_Response.scss
+++ b/src/styles/_Response.scss
@@ -1,7 +1,7 @@
 .response-section {
-  padding: 1rem;
+  padding: 1rem 0;
   background: #eaebfa;
-  max-width: 100vw;
+  max-width: 100%;
   overflow: hidden;
 }
 .charts-container {
