--- a/src/styles/_UserInfo.scss
+++ b/src/styles/_UserInfo.scss
@@ -1,6 +1,7 @@
 .user-info {
-  padding: 1rem;
+  padding: 1rem 0;
   width: 100%;
+  max-width: 100%;
   display: grid;
   justify-content: center;
   gap: 2rem;
