--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-body{
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+// body{
+//   max-width: 100vw;
+//   overflow-x: hidden;
+// }
